# ls2

./: .clang-format  .clang-tidy  CMakeLists.txt  conanfile.txt  filehandler.cpp  filehandler.h  main.cpp
.github/workflows/: c-cpp.yml
include/: ArgumentParser.h  Display.h  Entry.h  Filehandler.h  IFileHandler.h  LsCore.h  OsFileInfo.h  StringFormater.h  UnixFileInfo.h  argumentParser.h  display.h  entry.h  filehandler.h  filesystem.h  lsCore.h  operatingSystem.h  stringFormater.h  unixFileSystem.h  unixOperatingSystem.h
src/: ArgumentParser.cpp  Display.cpp  Filehandler.cpp  LsCore.cpp  UnixFileInfo.cpp  argumentParser.cpp  display.cpp  filehandler.cpp  filehandler.h  filehandler.test.cpp  lsCore.cpp  main.cpp  stringFormater.cpp  stringFormater.h  stringFormater.test.cpp  unixFileSystem.cpp  unixOperatingSystem.cpp
tests/: ArgumentParser.test.cpp  Display.test.cpp  argumentParser.test.cpp  display.test.cpp  filehandler.test.cpp  stringFormater.test.cpp
tests/mocks/: MockFileHandler.h
